Fixed alignments and font visibility

--- a/styles.css
+++ b/styles.css
@@ -127,30 +127,38 @@ span {
     line-height: 1.2;
     margin-top: 2rem;
     color: var(--font-heading);
-    text-shadow: 0.5rem 0.5rem 0.5rem var(--black);
+    /* text-shadow: 0.5rem 0.5rem 0.5rem var(--black); */
+    text-shadow: 0px 4px 5px rgb(8, 8, 8);
 }
 
 .home-content h2 {
     font-size: 3.2rem;
     font-weight: 700;
+    margin-left: 5px;
     margin-top: 2rem;
     color: var(--bg);
+    text-shadow: 0px 2px 2px rgb(8, 8, 8);
 }
 
 .home-content h3 {
     font-size: 2.4rem;
     font-weight: 600;
+    margin-left: 5px;
     padding: 2rem 0;
+    text-shadow: 0px 2px 2px rgb(250, 250, 250);
 }
 
 .home-content p {
     font-size: 1.6rem;
     font-weight: 600;
+    margin-left: 5px;
+    text-shadow: 0px 2px 2px rgb(250, 250, 250);
 }
 
 .home-img img {
     width: 20vw;
     border-radius: 50%;
+    margin-top: 150px;
 }
 
 .btn {
@@ -209,7 +217,13 @@ span {
     margin: 2rem 0;
 }
 
+.product-btn {
+    margin-left: 10px;
+}
 
+.heading {
+    margin-left: -4px;
+}
 
 /* About Section */
 
